# generative-models

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/ddpm/: mnist.yaml
configs/vae/: mnist.yaml
docs/assets/vae/: epoch_comparison.md
scripts/: compare_epoch_experiments.py  export_ddpm_readme_assets.py  export_readme_assets.py  interpolate_vae.py  plot_ddpm_training_curves.py  plot_training_curves.py  reconstruct_vae.py  sample_ddpm.py  sample_vae.py  train_ddpm.py  train_vae.py  verify_ddpm.py  verify_ddpm_loss.py  verify_decoder.py  verify_encoder.py  verify_forward_diffusion.py  verify_mnist_dataloader.py  verify_noise_scheduler.py  verify_time_embedding.py  verify_unet.py  verify_vae.py  verify_vae_loss.py  visualize_forward_diffusion.py  visualize_latent_vae.py  visualize_time_embedding.py
src/generative_models/: __init__.py
src/generative_models/datasets/: __init__.py  mnist.py
src/generative_models/ddpm/: __init__.py  checkpointing.py  diffusion.py  forward.py  sampler.py  scheduler.py  time_embedding.py  unet.py
src/generative_models/diffusion/: __init__.py
src/generative_models/evaluation/: __init__.py  vae_sampling.py
src/generative_models/losses/: __init__.py  ddpm_loss.py  vae_loss.py
src/generative_models/models/: __init__.py  vae.py
src/generative_models/trainers/: __init__.py  ddpm_trainer.py  vae_trainer.py
src/generative_models/utils/: device.py  (+1 more)
tests/: test_dataset.py  test_ddpm_trainer.py  test_diffusion.py  test_imports.py  test_vae.py  test_vae_experiments.py  test_vae_sampling.py  test_vae_trainer.py
